--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -12,5 +12,7 @@
             "email": "pietromrl0@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
